<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/signupImageButton"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:adjustViewBounds="true"
        android:background="@drawable/image_bg"

        android:scaleType="fitCenter"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="@id/firstNameTextArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/firstNameTextArea"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lastNameTextArea"
        app:layout_constraintHorizontal_bias=".184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupImageButton"
        app:layout_constraintVertical_bias=".01"
        app:layout_constraintWidth_percent=".4" />


    <EditText
        android:id="@+id/lastNameTextArea"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupImageButton"
        app:layout_constraintVertical_bias="0.011"
        app:layout_constraintWidth_percent=".4" />

    <EditText
        android:id="@+id/emailTextArea"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextArea"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/passwordTextArea"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextArea"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/reEnterPasswordTextArea"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_reEnterPasswordTextArea"
        android:inputType="textPassword"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextArea"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/phoneNumberTextArea"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reEnterPasswordTextArea"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".4" />

    <EditText
        android:id="@+id/birthDayPicker"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_birtday"
        android:inputType="date"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reEnterPasswordTextArea"
        app:layout_constraintVertical_bias="0.048"
        app:layout_constraintWidth_percent=".4" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextArea"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent=".6" />


</androidx.constraintlayout.widget.ConstraintLayout>